# GpGram

./: .gitignore  .readthedocs.yaml  .readthedocs.yml  CHANGELOG.md  LICENSE  PYPI_UPLOAD_GUIDE.md  README.md  publish.py  pyproject.toml  setup.cfg  setup.py  upload_to_pypi.py
.github/workflows/: ci.yml  publish-to-pypi.yml  publish.yml  pypi.yml
docs/: api_reference.md  conf.py  examples.md  genindex.html  index.html  index.md  objects.inv  requirements.txt  search.html  searchindex.js
docs/_modules/: index.html
docs/_modules/gpgram/: bot.html
docs/_sources/: index.rst.txt
docs/source/: conf.py
examples/: README.md  command_bot.py  echo_bot.py  example_1.py  keyboard_bot.py  markdown_bot.py  media_bot.py  test.py  webhook_bot.py
gpgram/: __init__.py  bot.py
gpgram/api/: __init__.py  media.py  webhook.py
gpgram/core/: __init__.py  bot.py
gpgram/types/: __init__.py  base.py  callback_query.py  chat.py  message.py  update.py  user.py
static/css/: docs.css  main.css  prism.css
static/js/: docs.js  main.js
tests/: __init__.py
